quoting-CypressTK1/force-app/main/default/objects/COLARate__c/fields/PassthroughPercentage__c.field-meta.xml
<CustomField>
    <fullName>PassthroughPercentage__c</fullName>
    <label>Pass-through Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>