quoting-CypressTK1/force-app/main/default/objects/COLARate__c/fields/PassthroughRateOverride__c.field-meta.xml
<CustomField>
    <fullName>PassthroughRateOverride__c</fullName>
    <label>Pass-through Rate Override</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>