quoting-CypressTK1/force-app/main/default/objects/COLARate__c/fields/RateOverride__c.field-meta.xml
<CustomField>
    <fullName>RateOverride__c</fullName>
    <label>Rate Override</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>