quoting-CypressTK1/force-app/main/default/objects/COLARate__c/fields/ServiceYear__c.field-meta.xml
<CustomField>
    <fullName>ServiceYear__c</fullName>
    <label>Service Year</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>