quoting-CypressTK1/force-app/main/default/objects/COLARate__c/validationRules/ServiceYearValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceYearValidation</fullName>
    <active>true</active>
    <errorConditionFormula
	>(ServiceYear__c &lt; YEAR(TODAY())) || (ServiceYear__c &gt; (YEAR(TODAY()) + 1))</errorConditionFormula>
    <errorMessage>Service Year must occur in the current year or next year</errorMessage>
</ValidationRule>