quoting-CypressTK1/force-app/main/default/objects/COLARate__c/validationRules/YearOverYearRateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>YearOverYearRateValidation</fullName>
    <active>true</active>
    <description>Year Over Year Rate must be greater than 0.</description>
    <errorConditionFormula
	>IF( ISPICKVAL(RateSheetId__r.Type__c, &apos;Global&apos;) , YearOverYearRate__c &lt;= 0, YearOverYearRate__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>YearOverYearRate__c</errorDisplayField>
    <errorMessage>Year Over Year Rate must be greater than 0.</errorMessage>
</ValidationRule>